<resources>
    <string name="app_name">Fast QR &amp; Barcode</string>
    <string name="app_Key_advertisement">fee50c333ff3825fd6ad6d38cff78154de3025546d47a84f</string>
    <string name="turn_on_flashlight">Turn on Flashlight</string>
    <string name="turn_off_flashlight">Turn off Flashlight</string>
    <string name="barcodeview">barcodeView</string>
    <string name="barcode_Title">Title:</string>
    <string name="barcode_content">Content:</string>
    <string name="no_date">No Date</string>
    <string name="no_title">No Title</string>
    <string name="dialog_Get_Title_Barcode_Title">Choose A Title For Barcode</string>
    <string name="sure_to_exit">Please , Press Back for Exit . . .  </string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="permission_call_phone">Access to the call phone is needed for detection</string>
    <string name="permission_reade_phone_state">Access to the reade phone state is needed for detection</string>
    <!-- Recycler Swipe -->
    <string name="deleted">Deleted</string>
    <string name="undo">UNDO</string>
    <!--dialog exit from app-->
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>
    <string name="rate_us">Rate Us</string>
    <string name="dialog_exit_from_app_title">Rate Us </string>
    <string name="flash_on_off">flash on-off</string>
    <string name="camera_sound">camera_sound</string>
    <string name="barcode_icon">BarcodeIcon</string>
</resources>
