<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lyt_container"
    android:background="@color/gray_background"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <RelativeLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/img_barcode_Image"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/barcode_icon"
            android:background="#ffffff" />

        <TextView
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_title"
            android:paddingRight="@dimen/list_item_padding_sides"
            android:paddingLeft="@dimen/list_item_padding_sides"
            android:id="@+id/txt_barcode_title_recycler"
            android:layout_toRightOf="@+id/img_barcode_Image"
            android:layout_alignBottom="@+id/img_barcode_Image"
            android:layout_alignTop="@+id/img_barcode_Image"
            android:gravity="center_vertical" />

        <!--<TextView
            android:background="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_date"
            android:paddingRight="@dimen/list_item_padding_sides"
            android:paddingLeft="@dimen/list_item_padding_sides"
            android:id="@+id/txt_barcode_date_scan_recycler"
            android:textStyle="italic"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_below="@+id/txt_barcode_title_recycler"
            android:layout_toRightOf="@+id/img_barcode_Image" />-->

    </RelativeLayout>

<LinearLayout android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingRight="@dimen/list_item_padding_sides"
    android:paddingLeft="@dimen/list_item_padding_sides"
    android:height="@dimen/list_item_height"
    android:weightSum="3"
    android:visibility="gone"
    android:orientation="horizontal">

    <TextView android:id="@+id/txt_delete"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:gravity="center_vertical"
        android:textColor="@android:color/white"
        android:hapticFeedbackEnabled="true"
        android:layout_weight="2"
        android:clickable="false"
        android:text="@string/deleted"/>

    <TextView android:id="@+id/txt_undo"
        android:layout_height="match_parent"
        android:layout_width="0dp"
        android:gravity="center"
        android:textColor="@color/yellow"
        android:layout_weight="1"
        android:clickable="false"
        android:text="@string/undo"/>

</LinearLayout>

</FrameLayout>