<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_layout_continuous_scan">

    <com.journeyapps.barcodescanner.CompoundBarcodeView
        android:id="@+id/barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@+id/buttonsLayout"
        android:layout_alignParentTop="true"
        android:background="@null">

    </com.journeyapps.barcodescanner.CompoundBarcodeView>

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/camera_sound"
        android:contentDescription="@string/camera_sound"
        android:background="@null"
        android:src="@mipmap/camera_sound_on"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" />

    <ImageButton
        android:id="@+id/switch_flashlight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_flashlight"
        android:src="@mipmap/camera_flash"
        android:background="@null"
        android:paddingTop="10dp"
        android:paddingLeft="10dp"
        android:contentDescription="@string/flash_on_off"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/camera_sound"
        android:layout_toEndOf="@+id/camera_sound" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:id="@+id/buttonsLayout">

        <include layout="@layout/user_toolbar_camera_page"/>

    </LinearLayout>

    <View
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:id="@+id/centerHorizont" />

</RelativeLayout>